--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://cdn.onesrc.cn/uploads/images/onepoint_30.png">
-    <title>onepoint-vue</title>
+    <title>Just One Point</title>
   </head>
   <body>
     <noscript>
